# moltsystem

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  vitest.config.ts
app/__tests__/: tiempos-utils.test.ts
app/app/: layout.tsx  not-found.tsx  page.tsx
app/components/: nav-bar.tsx
app/lib/: column-prefs.ts  fases.ts  format.ts  score-pesos.ts  tiempos-utils.ts
app/types/: supabase.ts
context/: 00_molt_empresa.md  01_flujo_produccion.md  02_rituales.md  03_modelo_iter1.md  04_plan_implementacion.md  05_modelo_datos_borrador_v3_1.md  06_plan_iter1_5.md  plan_clickup_sync.md  plan_gantt_fase_fixes.md  plan_iter1_6.md  plan_orden_reorden_columnas.md
data/: MOLT_Vista_Integrada_Proyectos.xlsx  README.md  actualización satelites.xlsx  tiempos_por_fase.xlsx
data/state/: clickup_pending.json  fase_map.json
deploy/: docker-compose.prod.yml
docs/: ARQUITECTURA.md  MOLT_Criterios_Priorizacion_OPs_28052026_1.pptx
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_semantic_marker  graph.html  graph.json  manifest.json
graphify-out/2026-06-10/: GRAPH_REPORT.md  graph.json
scripts/: 20_load_to_supabase.py  21_heuristica_fases.py  22_clickup_sync.py  22_sync_componentes.py  23_apply_clickup_pending.py  24_sync_satelites.py  25_load_vista_maestra.py  26_load_tiempos_fase.py  27_load_tiempos_satelites.py
tests/: test_tiempos_integration.py
utils/: clickup_client.py  clickup_helpers.py  supabase_client.py
(+150 files in other folders)
